    - LanguageMy
    - LanguageKaa
    - LanguageDsb
    - LanguageLa
    - LanguageBs
    - LanguageSl
    - LanguageQqx
    - LanguageOs
    - LanguageZh_hans
    - LanguageKsh
    - LanguageKk
    - LanguageWuu
    - LanguageGa
    - LanguageTyv
    - LanguageMl
    - LanguageAz
    - LanguageYue
    - LanguageJa
    - LanguageCu
    - LanguageZh
    - LanguageHsb
    - LanguageGan
  - MediaWiki\Skins\Hook => MediaWiki\Language\Skin
    - SkinAfterPortletHook
    - SkinPageReadyConfigHook
  - Logging related hooks: MediaWiki\Hook => MediaWiki\Logging\Hook
    - LogEventsListGetExtraInputsHook
    - LogEventsListLineEndingHook
    - LogEventsListShowLogExtractHook
    - LogLineHook
    - ManualLogEntryBeforePublishHook
  - Logging related pager: MediaWiki\Pager => MediaWiki\Logging\Pager
    - LogPager
  - Mail related hooks: MediaWiki\Hook => MediaWiki\Mail\Hook
    - AlternateUserMailerHook
    - UserMailerChangeReturnPathHook
    - UserMailerSplitToHook
    - UserMailerTransformContentHook
    - UserMailerTransformMessageHook
  - MediaWiki\Media
    - PNGMetadataExtractor
    - MediaHandlerFactory
    - MediaTransformInvalidParametersException
    - DjVuImage
    - SVGReader
    - IPTC
    - BitmapHandler_ClientOnly
    - TransformationalImageHandler
    - BmpHandler
    - JpegMetadataExtractor
    - GIFMetadataExtractor
    - ExifBitmapHandler
    - BitmapHandler
    - InvalidJpegException
    - DjVuHandler
    - ThumbnailImage
    - JpegHandler
    - GIFHandler
    - PNGHandler
    - MediaHandlerState
    - TrivialMediaHandlerState
    - MediaHandler
    - InvalidSVGException
    - XCFHandler
    - TiffHandler
    - MediaTransformError
    - BitmapMetadataHandler
    - FormatMetadata
    - InvalidTiffException
    - TransformTooBigImageAreaError
    - TransformParameterError
    - SvgHandler
    - InvalidPSIRException
    - ImageHandler
    - WebPHandler
    - MediaTransformOutput
    - Jpeg2000Handler
    - Exif