@@ -2334,6 +2334,9 @@ $wgAutoloadLocalClasses = [
 	'MediaWiki\\Notification\\TitleAware' => __DIR__ . '/includes/Notification/TitleAware.php',
 	'MediaWiki\\Notification\\Types\\SimpleNotification' => __DIR__ . '/includes/Notification/Types/SimpleNotification.php',
 	'MediaWiki\\Notification\\Types\\WikiNotification' => __DIR__ . '/includes/Notification/Types/WikiNotification.php',
+	'MediaWiki\\ObjectCache\\ObjectCache' => __DIR__ . '/includes/ObjectCache/ObjectCache.php',
+	'MediaWiki\\ObjectCache\\ObjectCacheFactory' => __DIR__ . '/includes/ObjectCache/ObjectCacheFactory.php',
+	'MediaWiki\\ObjectCache\\SqlBagOStuff' => __DIR__ . '/includes/ObjectCache/SqlBagOStuff.php',
 	'MediaWiki\\OutputHandler' => __DIR__ . '/includes/Output/OutputHandler.php',
 	'MediaWiki\\OutputTransform\\ContentDOMTransformStage' => __DIR__ . '/includes/OutputTransform/ContentDOMTransformStage.php',
 	'MediaWiki\\OutputTransform\\ContentHolderTransformStage' => __DIR__ . '/includes/OutputTransform/ContentHolderTransformStage.php',
