@@ -25,6 +25,7 @@ use MediaWiki\Logging\ManualLogEntry;
 use MediaWiki\MainConfigNames;
 use MediaWiki\Notification\NotificationService;
 use MediaWiki\Notification\RecipientSet;
+use MediaWiki\ObjectCache\ObjectCacheFactory;
 use MediaWiki\Page\PageIdentity;
 use MediaWiki\Permissions\Authority;
 use MediaWiki\Permissions\PermissionStatus;
@@ -47,7 +48,6 @@ use MediaWiki\User\UserNameUtils;
 use MediaWiki\User\UserRigorOptions;
 use MediaWiki\User\WelcomeNotification;
 use MediaWiki\Watchlist\WatchlistManager;
-use ObjectCacheFactory;
 use Psr\Log\LoggerAwareInterface;
 use Psr\Log\LoggerInterface;
 use Psr\Log\NullLogger;
