@@ -64,6 +64,7 @@ use MediaWiki\Logging\RightsLogFormatter;
 use MediaWiki\Logging\TagLogFormatter;
 use MediaWiki\Logging\UploadLogFormatter;
 use MediaWiki\Mail\EmaillingJob;
+use MediaWiki\ObjectCache\SqlBagOStuff;
 use MediaWiki\Page\DeleteLinksJob;
 use MediaWiki\Page\DeletePageJob;
 use MediaWiki\Password\Argon2Password;
@@ -96,7 +97,6 @@ use MediaWiki\Watchlist\ClearUserWatchlistJob;
 use MediaWiki\Watchlist\ClearWatchlistNotificationsJob;
 use MediaWiki\Watchlist\WatchlistExpiryJob;
 use ReflectionClass;
-use SqlBagOStuff;
 use Wikimedia\EventRelayer\EventRelayerNull;
 use Wikimedia\ObjectCache\APCUBagOStuff;
 use Wikimedia\ObjectCache\EmptyBagOStuff;
