@@ -9,10 +9,10 @@ use LogicException;
 use MediaWiki\DomainEvent\DomainEventSource;
 use MediaWiki\DomainEvent\DomainEventSubscriber;
 use MediaWiki\Exception\ShellDisabledError;
+use MediaWiki\ObjectCache\ObjectCacheFactory;
 use MediaWiki\Settings\SettingsBuilder;
 use MediaWiki\Shell\Shell;
 use MediaWiki\WikiMap\WikiMap;
-use ObjectCacheFactory;
 use RuntimeException;
 use UnexpectedValueException;
 use Wikimedia\ObjectCache\BagOStuff;
